--- a/VideoCloudApp/VideoCloudApp.csproj
+++ b/VideoCloudApp/VideoCloudApp.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="xFFmpeg.NET" Version="5.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\uploads\" />
+  </ItemGroup>
+
 </Project>
